[tool.poetry]
name = "find-home"
version = "0.1.0"
description = ""
authors = ["Andrei Toterman <andrei.toterman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
googlemaps = "4.10.0"
folium = "0.19.2"
pandas = "2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
